tests/ui/expressions/struct-expressions/struct-expression-indexed-initializer-type-2.stderr
error[E0308]: mismatched types
  --> $DIR/struct-expression-indexed-initializer-type-2.rs:7:9
   |
LL |     let employee = Employee(
   |                    -------- arguments to this struct are incorrect
LL |         "Maria".to_string(),   
LL |         "Maria".to_string(),
   |         ^^^^^^^^^^^^^^^^^^^ expected `i32`, found `String`
   |
note: tuple struct defined here
  --> $DIR/struct-expression-indexed-initializer-type-2.rs:2:8
   |
LL | struct Employee(String, i32, i32);
   |        ^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
